# SCC-Formal_Constitution

./: .gitignore  COPYING.md  Dockerfile  Makefile  NOTICE  README.md  mechanization_manifest.json  release_manifest.json
docs/: SCC_Engineering_Handbook_Kernel_Fortress_MECH_10_10.tex  SCC_Formal_Canon_Kernel_Fortress_MECH_10_10.tex  SCC_SYSTEM_OVERVIEW_ONE_PAGER.md  SCC_System_Overview_OnePager_MECH_10_10.tex  canonical_encoding.md  checker_walkthrough.md  ci_evidence_lock.md  federation_evidence_protocol.md  final_countdown.md  fixture_gate_map.md  index.html  mechanization_bridge.md  memory_lineage_compression_stress.md  numerical_stability_tcb.md  orbital_launch_checklist.md  proof_mapping.md  release_manifest_signing.md  reproducibility_card.md  reviewer_quickstart.md  scaffold_migration.md  stage1_v1_release_plan.md  stage_gate_matrix.csv  stride_security_review.md  tcb_ledger.md  validation_report.md  verify_in_5_minutes.md
federation/: manifest.json
formal/: README.md
golden/: manifest.json  valid_exact.json  valid_safe_refined.json  valid_stutter.json
negative_corpus/: manifest.json
paper/: checklist.tex  main.tex  (+5 more)
rust/: Cargo.toml
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: checker_roundtrip.rs  memory_lineage.rs
rust/src/: audit.rs  canonical.rs  checker.rs  env.rs  events.rs  governance.rs  hash.rs  lib.rs  po.rs  refinement.rs  replay.rs  runtime.rs  state.rs  transition.rs
rust/tests/: common.rs  federation_quorum.rs  golden_vectors.rs  memory_lineage_compression.rs  negative_corpus.rs  numerical_stability.rs  proptest_invariants.rs
(+45 files in other folders)
